Adding images to documentation, cleaning up domains

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -12,7 +12,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-07T19:58:00.789835Z",
+     "end_time": "2023-07-07T19:58:03.115818Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -27,7 +32,8 @@
     "import data_cleanup as dc\n",
     "import functions as fun\n",
     "import Documentation as doc\n",
-    "import severity_score as ses"
+    "import severity_score as ses\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -319,13 +325,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-07T19:59:52.180424Z",
+     "end_time": "2023-07-07T19:59:52.925407Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Histogramm mit allen DMS scores\n",
-    "#histogramm mit smu\n",
-    "#Histogramm vergleich smu zu alle dms scores DNA binding"
+    "# All DMS scores devided onto the different domains\n",
+    "all_dms = plt.imread('../domain_comparison/data/all_dms.png')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Sinlge mutations only\n",
+    "smu_dms = plt.imread('../domain_comparison/data/smu_dms.png')\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(smu_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-07T20:00:45.534105Z",
+     "end_time": "2023-07-07T20:00:46.269094Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Comparing DNA binding domain\n",
+    "all_vs_smu = plt.imread('../domain_comparison/data/all_vs_smu.png')\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-07T20:02:06.744308Z",
+     "end_time": "2023-07-07T20:02:07.430463Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
