--- a/domain_comparison/all_dms.ipynb
+++ b/domain_comparison/all_dms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:11.664343Z",
-     "end_time": "2023-07-06T23:26:11.734217Z"
+     "start_time": "2023-07-07T19:38:14.628757Z",
+     "end_time": "2023-07-07T19:38:14.779383Z"
     }
    },
    "outputs": [],
@@ -28,8 +28,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:11.667605Z",
-     "end_time": "2023-07-06T23:26:11.798119Z"
+     "start_time": "2023-07-07T19:38:14.779738Z",
+     "end_time": "2023-07-07T19:38:14.824283Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:11.719893Z",
-     "end_time": "2023-07-06T23:26:11.852317Z"
+     "start_time": "2023-07-07T19:38:14.809701Z",
+     "end_time": "2023-07-07T19:38:14.905776Z"
     }
    },
    "outputs": [],
@@ -110,8 +110,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:11.841087Z",
-     "end_time": "2023-07-06T23:26:11.881180Z"
+     "start_time": "2023-07-07T19:38:14.905920Z",
+     "end_time": "2023-07-07T19:38:14.909278Z"
     }
    },
    "outputs": [],
@@ -142,8 +142,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:11.862347Z",
-     "end_time": "2023-07-06T23:26:12.270968Z"
+     "start_time": "2023-07-07T19:38:14.910178Z",
+     "end_time": "2023-07-07T19:38:15.235685Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:12.278577Z",
-     "end_time": "2023-07-06T23:26:12.553911Z"
+     "start_time": "2023-07-07T19:38:15.246272Z",
+     "end_time": "2023-07-07T19:38:15.522112Z"
     }
    },
    "outputs": [],
@@ -204,8 +204,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:12.564524Z",
-     "end_time": "2023-07-06T23:26:12.923064Z"
+     "start_time": "2023-07-07T19:38:15.523105Z",
+     "end_time": "2023-07-07T19:38:15.854836Z"
     }
    },
    "outputs": [],
@@ -233,8 +233,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:12.931162Z",
-     "end_time": "2023-07-06T23:26:13.256557Z"
+     "start_time": "2023-07-07T19:38:15.860064Z",
+     "end_time": "2023-07-07T19:38:16.193058Z"
     }
    },
    "outputs": [],
@@ -266,8 +266,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:13.262778Z",
-     "end_time": "2023-07-06T23:26:13.545561Z"
+     "start_time": "2023-07-07T19:38:16.196621Z",
+     "end_time": "2023-07-07T19:38:16.582238Z"
     }
    },
    "outputs": [],
@@ -304,8 +304,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:13.551911Z",
-     "end_time": "2023-07-06T23:26:13.850826Z"
+     "start_time": "2023-07-07T19:38:16.581081Z",
+     "end_time": "2023-07-07T19:38:16.873398Z"
     }
    },
    "outputs": [],
@@ -356,17 +356,19 @@
     "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
-    "ax.set_title('Fitted Curves')\n",
+    "ax.set_title('Different Domains with all DMS Scores')\n",
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "fig.savefig('./data/all_dms.png', dpi=300)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:13.821002Z",
-     "end_time": "2023-07-06T23:26:14.031713Z"
+     "start_time": "2023-07-07T19:40:00.805753Z",
+     "end_time": "2023-07-07T19:40:01.562895Z"
     }
    }
   },
@@ -382,8 +384,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.046348Z",
-     "end_time": "2023-07-06T23:26:14.134401Z"
+     "start_time": "2023-07-07T19:38:17.107692Z",
+     "end_time": "2023-07-07T19:38:17.117402Z"
     }
    },
    "outputs": [],
@@ -437,8 +439,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.049870Z",
-     "end_time": "2023-07-06T23:26:14.291042Z"
+     "start_time": "2023-07-07T19:38:17.118911Z",
+     "end_time": "2023-07-07T19:38:17.443972Z"
     }
    },
    "outputs": [],
@@ -451,8 +453,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.330577Z",
-     "end_time": "2023-07-06T23:26:14.613692Z"
+     "start_time": "2023-07-07T19:38:17.397814Z",
+     "end_time": "2023-07-07T19:38:17.614913Z"
     }
    },
    "outputs": [],
@@ -465,8 +467,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.511308Z",
-     "end_time": "2023-07-06T23:26:14.707077Z"
+     "start_time": "2023-07-07T19:38:17.617226Z",
+     "end_time": "2023-07-07T19:38:17.819265Z"
     }
    },
    "outputs": [],
@@ -479,8 +481,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.708977Z",
-     "end_time": "2023-07-06T23:26:14.950695Z"
+     "start_time": "2023-07-07T19:38:17.808228Z",
+     "end_time": "2023-07-07T19:38:18.007088Z"
     }
    },
    "outputs": [],
@@ -493,8 +495,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:14.951479Z",
-     "end_time": "2023-07-06T23:26:15.118600Z"
+     "start_time": "2023-07-07T19:38:18.009461Z",
+     "end_time": "2023-07-07T19:38:18.186774Z"
     }
    },
    "outputs": [],
@@ -507,8 +509,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:15.121031Z",
-     "end_time": "2023-07-06T23:26:15.292207Z"
+     "start_time": "2023-07-07T19:38:18.188677Z",
+     "end_time": "2023-07-07T19:38:18.381570Z"
     }
    },
    "outputs": [],
@@ -530,8 +532,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:26:15.293827Z",
-     "end_time": "2023-07-06T23:26:15.296913Z"
+     "start_time": "2023-07-07T19:38:18.383213Z",
+     "end_time": "2023-07-07T19:38:18.387446Z"
     }
    },
    "outputs": [],
