--- a/domain_comparison/all_dms_to_smu.ipynb
+++ b/domain_comparison/all_dms_to_smu.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:38.996613Z",
-     "end_time": "2023-07-06T23:20:38.998652Z"
+     "start_time": "2023-07-07T19:46:16.983074Z",
+     "end_time": "2023-07-07T19:46:17.049335Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:38.998506Z",
-     "end_time": "2023-07-06T23:20:39.004186Z"
+     "start_time": "2023-07-07T19:46:16.988126Z",
+     "end_time": "2023-07-07T19:46:17.052045Z"
     }
    }
   },
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.005355Z",
-     "end_time": "2023-07-06T23:20:39.009002Z"
+     "start_time": "2023-07-07T19:46:16.997146Z",
+     "end_time": "2023-07-07T19:46:17.075684Z"
     }
    }
   },
@@ -136,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.009798Z",
-     "end_time": "2023-07-06T23:20:39.014793Z"
+     "start_time": "2023-07-07T19:46:17.004029Z",
+     "end_time": "2023-07-07T19:46:17.078565Z"
     }
    }
   },
@@ -171,8 +171,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.015225Z",
-     "end_time": "2023-07-06T23:20:39.019027Z"
+     "start_time": "2023-07-07T19:46:17.011628Z",
+     "end_time": "2023-07-07T19:46:17.103824Z"
     }
    }
   },
@@ -206,8 +206,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.021718Z",
-     "end_time": "2023-07-06T23:20:39.043468Z"
+     "start_time": "2023-07-07T19:46:17.018202Z",
+     "end_time": "2023-07-07T19:46:17.104120Z"
     }
    }
   },
@@ -241,8 +241,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.026232Z",
-     "end_time": "2023-07-06T23:20:39.043714Z"
+     "start_time": "2023-07-07T19:46:17.024442Z",
+     "end_time": "2023-07-07T19:46:17.104771Z"
     }
    }
   },
@@ -273,16 +273,18 @@
     "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
-    "ax.set_title('Fitted Curves')\n",
+    "ax.set_title('DNA Binding Domain With all DMS scores and single mutations only')\n",
     "ax.legend()\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "fig.savefig('./data/all_vs_smu.png', dpi=300)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.032124Z",
-     "end_time": "2023-07-06T23:20:39.355855Z"
+     "start_time": "2023-07-07T19:46:23.288723Z",
+     "end_time": "2023-07-07T19:46:23.727604Z"
     }
    }
   },
@@ -312,17 +314,17 @@
     "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
-    "ax.set_title('Fitted Curves')\n",
+    "ax.set_title('Fitted curves')\n",
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.356418Z",
-     "end_time": "2023-07-06T23:20:39.603954Z"
+     "start_time": "2023-07-07T19:46:38.307929Z",
+     "end_time": "2023-07-07T19:46:38.490198Z"
     }
    }
   },
@@ -334,8 +336,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:20:39.604567Z",
-     "end_time": "2023-07-06T23:20:39.607616Z"
+     "start_time": "2023-07-07T19:46:18.089513Z",
+     "end_time": "2023-07-07T19:46:18.091015Z"
     }
    }
   }
