--- a/domain_comparison/smu_dms.ipynb
+++ b/domain_comparison/smu_dms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:55.347347Z",
-     "end_time": "2023-07-07T10:39:55.449098Z"
+     "start_time": "2023-07-07T19:42:45.043092Z",
+     "end_time": "2023-07-07T19:42:45.181252Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:55.364385Z",
-     "end_time": "2023-07-07T10:39:56.679692Z"
+     "start_time": "2023-07-07T19:42:45.051602Z",
+     "end_time": "2023-07-07T19:42:46.208883Z"
     }
    },
    "outputs": [],
@@ -70,8 +70,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T11:00:28.003175Z",
-     "end_time": "2023-07-07T11:00:28.019554Z"
+     "start_time": "2023-07-07T19:42:46.211640Z",
+     "end_time": "2023-07-07T19:42:46.223413Z"
     }
    },
    "outputs": [],
@@ -122,7 +122,7 @@
     "t1 = adjust_domain(domains_regulatory, name='t1_domain', frame=df)\n",
     "\n",
     "t1_domain = t1['domain']\n",
-    "t1_list = t1['domain_list']['DMS_score']\n",
+    "t1_list = t1['domain_list']\n",
     "t1_mean = t1['mean']\n",
     "\n"
    ]
@@ -148,7 +148,11 @@
     "reg_list = doc.slice_domain(df, start= reg_start, end= reg_end)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-07T19:42:46.224905Z",
+     "end_time": "2023-07-07T19:42:46.275903Z"
+    }
    }
   },
   {
@@ -163,13 +167,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:56.750720Z",
-     "end_time": "2023-07-07T10:39:56.754008Z"
+     "start_time": "2023-07-07T19:42:46.276774Z",
+     "end_time": "2023-07-07T19:42:46.280022Z"
     }
    },
    "outputs": [],
    "source": [
-    "t1_mean = t1_domain.mean().rename('mean')\n",
+    "#t1_mean = t1_domain.mean().rename('mean')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
     "\n",
@@ -195,8 +199,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:56.754965Z",
-     "end_time": "2023-07-07T10:39:57.063272Z"
+     "start_time": "2023-07-07T19:42:46.285944Z",
+     "end_time": "2023-07-07T19:42:46.572992Z"
     }
    },
    "outputs": [],
@@ -226,8 +230,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:57.069910Z",
-     "end_time": "2023-07-07T10:39:57.370232Z"
+     "start_time": "2023-07-07T19:42:46.572824Z",
+     "end_time": "2023-07-07T19:42:46.841972Z"
     }
    },
    "outputs": [],
@@ -255,8 +259,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:57.367166Z",
-     "end_time": "2023-07-07T10:39:57.766853Z"
+     "start_time": "2023-07-07T19:42:46.849393Z",
+     "end_time": "2023-07-07T19:42:47.161140Z"
     }
    },
    "outputs": [],
@@ -284,8 +288,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:57.773048Z",
-     "end_time": "2023-07-07T10:39:58.072455Z"
+     "start_time": "2023-07-07T19:42:47.171301Z",
+     "end_time": "2023-07-07T19:42:47.488501Z"
     }
    },
    "outputs": [],
@@ -316,8 +320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:58.078279Z",
-     "end_time": "2023-07-07T10:39:58.369383Z"
+     "start_time": "2023-07-07T19:42:47.496125Z",
+     "end_time": "2023-07-07T19:42:47.744776Z"
     }
    },
    "outputs": [],
@@ -353,8 +357,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:58.381085Z",
-     "end_time": "2023-07-07T10:39:58.695904Z"
+     "start_time": "2023-07-07T19:42:47.752687Z",
+     "end_time": "2023-07-07T19:42:48.022049Z"
     }
    },
    "outputs": [],
@@ -405,17 +409,19 @@
     "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
-    "ax.set_title('Fitted Curves')\n",
+    "ax.set_title('Different Domains with only Single Mutation DMS Scores')\n",
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "fig.savefig('./data/smu_dms.png', dpi=300)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:58.728298Z",
-     "end_time": "2023-07-07T10:39:58.878522Z"
+     "start_time": "2023-07-07T19:42:48.022312Z",
+     "end_time": "2023-07-07T19:42:48.451813Z"
     }
    }
   },
@@ -431,8 +437,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:58.887215Z",
-     "end_time": "2023-07-07T10:39:59.006361Z"
+     "start_time": "2023-07-07T19:42:48.455223Z",
+     "end_time": "2023-07-07T19:42:48.457283Z"
     }
    },
    "outputs": [],
@@ -477,8 +483,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:58.971568Z",
-     "end_time": "2023-07-07T10:39:59.330596Z"
+     "start_time": "2023-07-07T19:42:48.459811Z",
+     "end_time": "2023-07-07T19:42:48.769146Z"
     }
    },
    "outputs": [],
@@ -491,8 +497,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:59.320706Z",
-     "end_time": "2023-07-07T10:39:59.505614Z"
+     "start_time": "2023-07-07T19:42:48.772452Z",
+     "end_time": "2023-07-07T19:42:48.930176Z"
     }
    },
    "outputs": [],
@@ -505,8 +511,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:59.509556Z",
-     "end_time": "2023-07-07T10:39:59.729944Z"
+     "start_time": "2023-07-07T19:42:48.931585Z",
+     "end_time": "2023-07-07T19:42:49.086793Z"
     }
    },
    "outputs": [],
@@ -519,8 +525,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:59.731478Z",
-     "end_time": "2023-07-07T10:39:59.952545Z"
+     "start_time": "2023-07-07T19:42:49.088489Z",
+     "end_time": "2023-07-07T19:42:49.263399Z"
     }
    },
    "outputs": [],
@@ -533,8 +539,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:39:59.951339Z",
-     "end_time": "2023-07-07T10:40:00.207849Z"
+     "start_time": "2023-07-07T19:42:49.265921Z",
+     "end_time": "2023-07-07T19:42:49.424730Z"
     }
    },
    "outputs": [],
@@ -547,8 +553,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:40:00.209802Z",
-     "end_time": "2023-07-07T10:40:00.378222Z"
+     "start_time": "2023-07-07T19:42:49.424870Z",
+     "end_time": "2023-07-07T19:42:49.586840Z"
     }
    },
    "outputs": [],
@@ -572,8 +578,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-07T10:40:00.377991Z",
-     "end_time": "2023-07-07T10:40:00.381270Z"
+     "start_time": "2023-07-07T19:42:49.588036Z",
+     "end_time": "2023-07-07T19:42:49.590901Z"
     }
    },
    "outputs": [],
