--- a/domain_comparison/rdm_dms.ipynb
+++ b/domain_comparison/rdm_dms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:18.306453Z",
-     "end_time": "2023-07-06T23:19:18.376266Z"
+     "start_time": "2023-07-07T19:35:59.864485Z",
+     "end_time": "2023-07-07T19:36:00.321108Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:18.314687Z",
-     "end_time": "2023-07-06T23:19:19.464423Z"
+     "start_time": "2023-07-07T19:36:00.322716Z",
+     "end_time": "2023-07-07T19:36:01.366721Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:19.467257Z",
-     "end_time": "2023-07-06T23:19:19.519416Z"
+     "start_time": "2023-07-07T19:36:01.368744Z",
+     "end_time": "2023-07-07T19:36:01.416036Z"
     }
    },
    "outputs": [],
@@ -143,8 +143,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:19.515981Z",
-     "end_time": "2023-07-06T23:19:19.534208Z"
+     "start_time": "2023-07-07T19:36:01.417475Z",
+     "end_time": "2023-07-07T19:36:01.420512Z"
     }
    },
    "outputs": [],
@@ -175,8 +175,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:19.530044Z",
-     "end_time": "2023-07-06T23:19:19.810857Z"
+     "start_time": "2023-07-07T19:36:01.421222Z",
+     "end_time": "2023-07-07T19:36:01.740555Z"
     }
    },
    "outputs": [],
@@ -206,8 +206,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:19.817781Z",
-     "end_time": "2023-07-06T23:19:20.148886Z"
+     "start_time": "2023-07-07T19:36:01.748030Z",
+     "end_time": "2023-07-07T19:36:02.018589Z"
     }
    },
    "outputs": [],
@@ -235,8 +235,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:20.156522Z",
-     "end_time": "2023-07-06T23:19:20.491476Z"
+     "start_time": "2023-07-07T19:36:02.024393Z",
+     "end_time": "2023-07-07T19:36:02.317584Z"
     }
    },
    "outputs": [],
@@ -264,8 +264,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:20.496291Z",
-     "end_time": "2023-07-06T23:19:20.788724Z"
+     "start_time": "2023-07-07T19:36:02.326440Z",
+     "end_time": "2023-07-07T19:36:02.684004Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:20.796668Z",
-     "end_time": "2023-07-06T23:19:21.043541Z"
+     "start_time": "2023-07-07T19:36:02.700299Z",
+     "end_time": "2023-07-07T19:36:03.068458Z"
     }
    },
    "outputs": [],
@@ -333,8 +333,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.047159Z",
-     "end_time": "2023-07-06T23:19:21.316340Z"
+     "start_time": "2023-07-07T19:36:03.060907Z",
+     "end_time": "2023-07-07T19:36:03.322722Z"
     }
    },
    "outputs": [],
@@ -390,13 +390,13 @@
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.318227Z",
-     "end_time": "2023-07-06T23:19:21.483300Z"
+     "start_time": "2023-07-07T19:36:03.331940Z",
+     "end_time": "2023-07-07T19:36:03.655240Z"
     }
    }
   },
@@ -412,8 +412,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.486937Z",
-     "end_time": "2023-07-06T23:19:21.494714Z"
+     "start_time": "2023-07-07T19:36:03.602120Z",
+     "end_time": "2023-07-07T19:36:03.656230Z"
     }
    },
    "outputs": [],
@@ -458,8 +458,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.495287Z",
-     "end_time": "2023-07-06T23:19:21.710381Z"
+     "start_time": "2023-07-07T19:36:03.627817Z",
+     "end_time": "2023-07-07T19:36:03.945568Z"
     }
    },
    "outputs": [],
@@ -472,8 +472,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.688341Z",
-     "end_time": "2023-07-06T23:19:21.834855Z"
+     "start_time": "2023-07-07T19:36:03.799050Z",
+     "end_time": "2023-07-07T19:36:04.186722Z"
     }
    },
    "outputs": [],
@@ -486,8 +486,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.838410Z",
-     "end_time": "2023-07-06T23:19:21.963797Z"
+     "start_time": "2023-07-07T19:36:04.030176Z",
+     "end_time": "2023-07-07T19:36:04.189247Z"
     }
    },
    "outputs": [],
@@ -500,8 +500,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:21.965476Z",
-     "end_time": "2023-07-06T23:19:22.124489Z"
+     "start_time": "2023-07-07T19:36:04.157691Z",
+     "end_time": "2023-07-07T19:36:04.368193Z"
     }
    },
    "outputs": [],
@@ -514,8 +514,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:22.125504Z",
-     "end_time": "2023-07-06T23:19:22.262445Z"
+     "start_time": "2023-07-07T19:36:04.330238Z",
+     "end_time": "2023-07-07T19:36:04.479593Z"
     }
    },
    "outputs": [],
@@ -528,8 +528,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:22.263166Z",
-     "end_time": "2023-07-06T23:19:22.472353Z"
+     "start_time": "2023-07-07T19:36:04.478224Z",
+     "end_time": "2023-07-07T19:36:04.650423Z"
     }
    },
    "outputs": [],
@@ -553,8 +553,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T23:19:22.473639Z",
-     "end_time": "2023-07-06T23:19:22.476796Z"
+     "start_time": "2023-07-07T19:36:04.649142Z",
+     "end_time": "2023-07-07T19:36:04.654392Z"
     }
    },
    "outputs": [],
