finalizing data exploration: modified appearance and rewrote titles for the notebooks for more clarity.

--- a/data_exploration/Hierarchical_clustering.ipynb
+++ b/data_exploration/Hierarchical_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "#### Hierarchical Clustering\n",
-    "In this notebook, we played around with hierarchical clustering for the first time to get a feeling for the data and to make some first plots. We did not go into much detail and just wanted to have a first look."
+    "In this notebook, we played around with hierarchical clustering for the first time to get a feeling for the data and to make some first plots. We did not go into much detail and just wanted to have a first look, so minor bugs where not fully optimized and only fixed later."
    ],
    "metadata": {
     "collapsed": false
