--- a/data_exploration/pca_hierarchical_plotting_domains.ipynb
+++ b/data_exploration/pca_hierarchical_plotting_domains.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "#### PCA, Hierarchical clustering and plotting implemented for each domain\n",
-    "In this notebook, we performed a pca dimension reduction, continued with a hierarchical clustering and plotted the results for different domains. To plot the different domains, you need to select the domain you want to plot in the cell with \"### EDIT FOR THE DOMAIN of your liking ###\"."
+    "In this notebook, we performed a pca dimension reduction, continued with a hierarchical clustering and plotted the results for different domains. To plot the different domains, you need to select the domain you want to plot in the cell labeled with \"### EDIT FOR THE DOMAIN OF YOUR LIKING ###\"."
    ],
    "metadata": {
     "collapsed": false
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ennow\\anaconda3\\envs\\dms\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -30,25 +30,19 @@
     "import pandas as pd\n",
     "import data_exploration as de\n",
     "import data_cleanup as dc\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "from scipy.cluster.hierarchy import linkage, fcluster\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.metrics import silhouette_score\n",
     "import domain_comparison as doc"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:38.695170200Z",
-     "start_time": "2023-07-06T07:57:37.801648500Z"
+     "end_time": "2023-07-08T08:43:50.566944900Z",
+     "start_time": "2023-07-08T08:43:49.629640900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "aa = pd.read_csv('../DMS_data/aminoacids.csv')\n",
@@ -59,14 +53,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:38.860624800Z",
-     "start_time": "2023-07-06T07:57:38.695170200Z"
+     "end_time": "2023-07-08T08:43:50.843135Z",
+     "start_time": "2023-07-08T08:43:50.577152Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Saving the different domains for better accessibility\n",
@@ -126,20 +120,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:39.329543700Z",
-     "start_time": "2023-07-06T07:57:38.876206600Z"
+     "end_time": "2023-07-08T08:43:51.317041100Z",
+     "start_time": "2023-07-08T08:43:50.858657300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "(13, 13)"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,17 +145,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:39.447721900Z",
-     "start_time": "2023-07-06T07:57:39.329543700Z"
+     "end_time": "2023-07-08T08:43:51.424547200Z",
+     "start_time": "2023-07-08T08:43:51.317041100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "### EDIT FOR THE DOMAIN of your liking ###\n",
+    "### EDIT FOR THE DOMAIN OF YOUR LIKING ###\n",
     "\n",
     "#Variable containing the domain, the plots are created for\n",
     "domain = dna_dist\n",
@@ -172,14 +166,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:39.563865Z",
-     "start_time": "2023-07-06T07:57:39.447721900Z"
+     "end_time": "2023-07-08T08:43:51.548250500Z",
+     "start_time": "2023-07-08T08:43:51.427051Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -196,8 +190,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:40.037587Z",
-     "start_time": "2023-07-06T07:57:39.563865Z"
+     "end_time": "2023-07-08T08:43:52.109978800Z",
+     "start_time": "2023-07-08T08:43:51.548250500Z"
     }
    }
   },
@@ -210,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -227,14 +221,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:40.192546100Z",
-     "start_time": "2023-07-06T07:57:40.045618700Z"
+     "end_time": "2023-07-08T08:43:52.225041500Z",
+     "start_time": "2023-07-08T08:43:52.087797100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -251,8 +245,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T07:57:40.690598800Z",
-     "start_time": "2023-07-06T07:57:40.192546100Z"
+     "end_time": "2023-07-08T08:43:52.660961500Z",
+     "start_time": "2023-07-08T08:43:52.225041500Z"
     }
    }
   }
