modified documentation file for Data Exploration part

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -12,12 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-07-07T19:58:00.789835Z",
-     "end_time": "2023-07-07T19:58:03.115818Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -211,40 +206,7 @@
    "metadata": {},
    "source": [
     "## Data exploration\n",
-    "*Was sind die Ergebnisse, auf die ihr gekommen seid? Also implementierte Funktionen mit einfügen, um dann plotten zu können*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we wanted to get a feel for the mean scores for each substitution calculated from the whole length of the p53 protein."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dc.rmv_na(de.mean_substitutions(norm_frame))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Distanzmatrix (DMS-Scores)\n",
-    "\n",
-    "dist_chem = de.aa_distance_matrix(aa)\n",
-    "\n",
-    "dist_wt_p53 = de.dms_distance_matrix_wt(norm_frame)\n",
-    "dist_mut_p53 = de.dms_distance_matrix_mutated(norm_frame)\n",
-    "mean_subs_p53 = dc.rmv_na(de.mean_substitutions(norm_frame))"
+    "#### First, we calculated the distance and mean substitution matrices. With these DataFrames, we performed PCA, clustering and plotted the results. To understand the code and see additional plots, take a look at the \"data_exploration\" python package."
    ]
   },
   {
@@ -252,12 +214,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# hierarchical ward clustering\n",
-    "de.plot_hier_clust(dist_chem, title = \"AAs chemical properties\")\n",
-    "\n",
-    "de.plot_hier_clust(dist_wt_p53, title = \"p53 distance matrix of WT AAs\")\n",
-    "de.plot_hier_clust(dist_mut_p53, title = \"p53 distance matrix of mutated AAs\")\n",
-    "de.plot_hier_clust(mean_subs_p53, title = \"p53 mean substitutions\")"
+    "# calculate feature matrices\n",
+    "feature_matrix_aa = dc.clean_aa(aa)\n",
+    "feature_matrix_p53 = dc.rmv_na(dc.df_transform(norm_frame))"
    ],
    "metadata": {
     "collapsed": false
@@ -268,16 +227,51 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#determine optimal amount of clusters. Algorithm not optimized, but quite a good estimation\n",
-    "clusters_by_sil_chem = de.determine_clusters_silhouette(dc.clean_aa(aa))\n",
+    "# calculate distance matrices as well as mean substitution matrices\n",
+    "dist_chem = de.aa_distance_matrix(aa)\n",
     "\n",
-    "clusters_by_sil_p53 = de.determine_clusters_silhouette(dc.rmv_na(dc.df_transform(norm_frame)))\n",
-    "clusters_by_sil_mean_p53 = de.determine_clusters_silhouette(mean_subs_p53)\n",
+    "dist_wt_p53 = de.dms_distance_matrix_wt(norm_frame)\n",
+    "dist_mut_p53 = de.dms_distance_matrix_mutated(norm_frame)\n",
+    "\n",
+    "mean_subs_wt_p53 = dc.rmv_na(de.mean_substitutions(norm_frame))\n",
+    "mean_subs_mut_p53 = dc.rmv_na(de.mean_substitutions(norm_frame).T)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# hierarchical ward clustering\n",
+    "de.plot_hier_clust(dist_chem, title = \"AAs chemical properties\")\n",
+    "print(\"---------------------------------\")\n",
+    "de.plot_hier_clust(dist_wt_p53, title = \"p53 distance matrix of WT AAs\")\n",
+    "de.plot_hier_clust(dist_mut_p53, title = \"p53 distance matrix of mutated AAs\")\n",
+    "print(\"---------------------------------\")\n",
+    "de.plot_hier_clust(mean_subs_wt_p53, title = \"p53 mean substitutions for WT AAs\")\n",
+    "de.plot_hier_clust(mean_subs_mut_p53, title = \"p53 mean substitutions for mutated AAs\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# determine optimal amount of clusters\n",
+    "clusters_by_sil_chem = de.determine_clusters_silhouette(feature_matrix_aa)\n",
+    "\n",
+    "clusters_by_sil_p53 = de.determine_clusters_silhouette(feature_matrix_p53)\n",
+    "\n",
     "\n",
     "print (clusters_by_sil_chem)\n",
     "print (\"---\")\n",
-    "print (clusters_by_sil_p53)\n",
-    "print (clusters_by_sil_mean_p53)"
+    "print (clusters_by_sil_p53)"
    ],
    "metadata": {
     "collapsed": false
@@ -289,17 +283,31 @@
    "outputs": [],
    "source": [
     "# Plotting, after pca and hierarchical clustering. clusters are defined by the colors shown in the legend.\n",
-    "de.pca_hierarchical_plot(dist_chem, optimal_num_cluster= clusters_by_sil_chem, title = \"AAs clustered by chemical properties\")\n",
+    "de.pca_hierarchical_plot(dist_chem, optimal_num_cluster= clusters_by_sil_chem, title = \"AAs clustered by chemical properties\", show_var=True)\n",
     "\n",
     "de.pca_hierarchical_plot(dist_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of WT AAs\")\n",
-    "de.pca_hierarchical_plot(dist_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of mutated AAs\")\n",
-    "de.pca_hierarchical_plot(mean_subs_p53, optimal_num_cluster=4, title = \"p53 clustered by mean substitutions\")\n",
+    "de.pca_hierarchical_plot(dist_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of mutated AAs\", show_var=True)\n",
     "\n",
+    "de.pca_hierarchical_plot(mean_subs_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions\")\n",
+    "de.pca_hierarchical_plot(mean_subs_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions inverted\")\n",
     "\n",
     "#------------------------------------------------------------------\n",
-    " # I HAVE NO IDEA WHY THESE PLOTS LOOK SO AWFUL IN THIS NOTEBOOK. For better plots look at the de.clustering_pca_plotting.ipynb file\n",
-    "# TO MAKE THESE PLOTS FOR EACH DOMAIN: Take a look at the de.pca_hierarchical_plotting_domains.ipynb file\n",
-    "# TO SEE THE PLOTS WITH K-MEANS: Take a look at the de.pca_kmeans_plotting.ipynb file"
+    "# I HAVE NO IDEA WHY THESE PLOTS LOOK SO AWFUL IN THIS NOTEBOOK. For better plots look at the de.clustering_pca_plotting.ipynb file"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### *Outlook for Data Exploration*\n",
+    "\n",
+    "TO MAKE THESE PLOTS FOR EACH DOMAIN: Take a look at the de.pca_hierarchical_plotting_domains.ipynb file\n",
+    "\n",
+    "TO SEE THE PLOTS WITH K-MEANS: To quantify the effects of the clustering method used (here: hierarchical clustering), we also performed clustering with kmeans to compare the results in the report. Take a look at the de.pca_kmeans_plotting.ipynb file\n",
+    "\n",
+    "TO PROOF OUR CODE RUNS ON ALL DATASETS: We ran our code on the Stiffler Dataset on E. coli ß-Lactamase. To see the plots, take a look at the pca_hierarchical_plotting_ßlactamase.ipynb file"
    ],
    "metadata": {
     "collapsed": false
@@ -325,15 +333,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-07-07T19:59:52.180424Z",
-     "end_time": "2023-07-07T19:59:52.925407Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# All DMS scores devided onto the different domains\n",
+    "# All DMS scores divided onto the different domains\n",
     "all_dms = plt.imread('../domain_comparison/data/all_dms.png')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
@@ -355,11 +358,7 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-07T20:00:45.534105Z",
-     "end_time": "2023-07-07T20:00:46.269094Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -375,11 +374,7 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-07T20:02:06.744308Z",
-     "end_time": "2023-07-07T20:02:07.430463Z"
-    }
+    "collapsed": false
    }
   },
   {
