small changes for title generation

--- a/data_exploration/pca_hierarchical_plotting.ipynb
+++ b/data_exploration/pca_hierarchical_plotting.ipynb
@@ -65,10 +65,10 @@
    "outputs": [],
    "source": [
     "# hierarchical ward clustering\n",
-    "de.plot_hier_clust(dist_chem, title = \"AAs chemical properties\")\n",
+    "de.plot_hier_clust(dist_chem, title = \"chemical properties of AAs\")\n",
     "print(\"---\")\n",
-    "de.plot_hier_clust(dist_wt_p53, title = \"p53 distance matrix of WT AAs\")\n",
-    "de.plot_hier_clust(dist_mut_p53, title = \"p53 distance matrix of mutated AAs\")\n",
+    "de.plot_hier_clust(dist_wt_p53, title = \"p53 distance matrix for WT AAs\")\n",
+    "de.plot_hier_clust(dist_mut_p53, title = \"p53 distance matrix for mutated AAs\")\n",
     "print(\"---\")\n",
     "de.plot_hier_clust(mean_subs_wt_p53, title = \"p53 mean substitutions for WT AAs\")\n",
     "de.plot_hier_clust(mean_subs_mut_p53, title = \"p53 mean substitutions for mutated AAs\")"
@@ -104,11 +104,11 @@
     "# Plotting, after pca and hierarchical clustering. clusters are defined by the colors shown in the legend.\n",
     "de.pca_hierarchical_plot(dist_chem, optimal_num_cluster= clusters_by_sil_chem, title = \"AAs clustered by chemical properties\", show_var=True)\n",
     "\n",
-    "de.pca_hierarchical_plot(dist_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of WT AAs\")\n",
+    "de.pca_hierarchical_plot(dist_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of WT AAs\",show_var= True)\n",
     "de.pca_hierarchical_plot(dist_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by distance matrix of mutated AAs\", show_var=True)\n",
     "\n",
-    "de.pca_hierarchical_plot(mean_subs_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions\")\n",
-    "de.pca_hierarchical_plot(mean_subs_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions inverted\")"
+    "de.pca_hierarchical_plot(mean_subs_wt_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions of WT AAs\")\n",
+    "de.pca_hierarchical_plot(mean_subs_mut_p53, optimal_num_cluster=clusters_by_sil_p53, title = \"p53 clustered by mean substitutions of mutated AAs\")"
    ],
    "metadata": {
     "collapsed": false
