--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -144,6 +144,7 @@
     }
    ],
    "source": [
+    "# The aminoacids in the original sequence that, when replaced, caused the most negative DMS scores throughout the whole Protein.\n",
     "fun.calculate_average_dms_score_old(('GNE', doc.gia_null_eto_norm_amp), ('GNN', doc.gia_null_nut_norm_amp), ('GWN', doc.gia_wt_nut_norm_amp), ('KH', doc.kot_hum_norm_amp))"
    ]
   },
@@ -168,6 +169,7 @@
     }
    ],
    "source": [
+    "#the amino acids that, when mutated to, resulted in the most significant decreases in the DMS score, indicating a substantial impact on protein function.\n",
     "fun.calculate_average_dms_score_new(('GNE', doc.gia_null_eto_norm_amp), ('GNN', doc.gia_null_nut_norm_amp), ('GWN', doc.gia_wt_nut_norm_amp), ('KH', doc.kot_hum_norm_amp))"
    ]
   },
@@ -191,25 +193,9 @@
     }
    ],
    "source": [
+    "#In order to make these comparisons a little clearer we used a heatmap to illustrate these trends of substitution. The x-axis shows us the DMS scores of the AA's when replaced and the y-axis the DMS-scores of the AA's when replaced with.\n",
     "fun.hmap_mean_variance(doc.mean_substitutionsGNE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "# These heatmaps show different trends:\n",
-    "# What we need to consider is that the Kotler dataset only covers a range of amino acids. From postion 102 to 292.                                      While the \"Giacomelli Wildtype Nutlin\" and \"Giacomelli Null Nutlin\" datasets exhibit some similarities in terms of trends and values, the same cannot be said when comparing them to the \"Giacomelli Null Etoposide\" dataset. This disparity is likely due to the use of different p53 activating agents, namely nutlin-3 and etoposide. One notable observation across all datasets is that amino acids in the range of approximately 100-300 generally display a negative effect caused by mutations. This could indicate a specific region that is evolutionary conserved and perfected. Additionally, the Kotler dataset exhibits a scarcity of values, which should be taken into consideration for future work.\n",
-    "# In addition to visually comparing the datasets, I wanted to investigate whether the datasets share positions in the amino acid sequence where the sum of all DMS scores is the lowest. This would indicate that these specific locations are particularly conserved."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-12T15:52:48.652563Z",
-     "start_time": "2023-07-12T15:52:48.572179Z"
-    }
-   }
   },
   {
    "cell_type": "code",
@@ -226,7 +212,7 @@
     }
    ],
    "source": [
-    "# The 5 lowest values in the \"Giacomelli null etoposide\" dataset\n",
+    "# The 5 position with the lowest mean DMS_scores in the \"Giacomelli null etoposide\" dataset\n",
     "doc.GNELV"
    ],
    "metadata": {
@@ -252,7 +238,7 @@
     }
    ],
    "source": [
-    "# The 5 highest values in the \"Giacomelli null etoposide\" dataset\n",
+    "# The 5 position with the highest mean DMS_scores in the \"Giacomelli null etoposide\" dataset\n",
     "doc.GNEHV"
    ],
    "metadata": {
@@ -303,6 +289,7 @@
     }
    ],
    "source": [
+    "#As a final and conclusive way to show the differences of the datasets we chose to visualize our datasets as linegraphs in one plot, this plot shows the mean DMS scores for each position and lets us quickly seek out positions that are greatly affected by mutation and those that are not. By summing up all DMS scores and dividing this sum by the number of values summed we can also create a rough comparability to the Kotler dataset which is also visible in this graph:\n",
     "doc.liniengraph(dataframes=[doc.gia_null_eto_z_mmn_df_mean, doc.gia_null_nut_z_mmn_df_mean, doc.gia_wt_nut_z_mmn_df_mean, doc.kot_hum_z_mmn_df_mean])"
    ],
    "metadata": {
